# dbsync-client/generated/api/openapi.yaml
@@ -203,6 +203,54 @@ paths:
       tags:
       - rest-handler
       x-accepts: application/json
+  /cardanoDbSyncApi/transaction/{txId}/outputs:
+    get:
+      operationId: getTransactionOutputs
+      parameters:
+      - example: a6ca444bd39cb51c7e997a9cead4a8071e2f7e5d1579ac4194b6aaaba923bc58
+        explode: false
+        in: path
+        name: txId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/TxOut'
+                type: array
+          description: OK
+      summary: Get ada outputs if tx
+      tags:
+      - rest-handler
+      x-accepts: application/json
+  /cardanoDbSyncApi/transaction/{txId}/metadata:
+    get:
+      operationId: getTransactionMetadata
+      parameters:
+      - example: a6ca444bd39cb51c7e997a9cead4a8071e2f7e5d1579ac4194b6aaaba923bc58
+        explode: false
+        in: path
+        name: txId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                type: string
+          description: OK
+      summary: Get json metadata of tx
+      tags:
+      - rest-handler
+      x-accepts: application/json
   /cardanoDbSyncApi/transaction/{txId}/confirmed:
     get:
       operationId: isTransactionConfirmed
@@ -708,6 +756,20 @@ components:
       - timestamp
       - txHash
       - withdrawn
+      type: object
+    TxOut:
+      example:
+        targetAddress: targetAddress
+        value: 0
+      properties:
+        targetAddress:
+          type: string
+        value:
+          format: int64
+          type: integer
+      required:
+      - targetAddress
+      - value
       type: object
     PoolInfo:
       example:
